# misarmy-talkbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/workflows/: ci.yml  publish-ghcr.yml
lavalink/: application.debug.yml  application.yml
misarmy_talkbot/: __main__.py  args.py  logger.py  reader_debug.py  utils.py  voice_log.py
misarmy_talkbot/config/: command.py  config.py
misarmy_talkbot/database/: database.py  preset.py  voice.py
misarmy_talkbot/locale/: compile.py  translations.py
misarmy_talkbot/locale/en_US/LC_MESSAGES/: messages.mo  messages.po
misarmy_talkbot/locale/es_AR/LC_MESSAGES/: messages.mo  messages.po
misarmy_talkbot/locale/es_ES/LC_MESSAGES/: messages.mo  messages.po
misarmy_talkbot/tts/: audio.py  edits.py  queue.py  reader.py  speaker.py
misarmy_talkbot/tts/voices/: edge.py  google.py
scripts/: install-githooks.sh
src/misarmy_talkbot/: __main__.py  args.py  logger.py  paths.py  utils.py
src/misarmy_talkbot/app/: bot.py  commands.py  events.py  follow_ops.py  voice_sync.py
src/misarmy_talkbot/core/follow/: __init__.py  grace.py  registry.py
src/misarmy_talkbot/core/ops/: announcer.py
src/misarmy_talkbot/core/playback/: audio.py  engine.py  queue.py  voice_stop.py
src/misarmy_talkbot/core/session/: __init__.py  registry.py  session.py
src/misarmy_talkbot/core/voice/: __init__.py  close_codes.py  lavalink_session.py  pilot.py  voice_client.py
src/misarmy_talkbot/infra/: audio_storage.py
src/misarmy_talkbot/infra/config/: command.py  config.py  default_config.jsonc  presence.py
src/misarmy_talkbot/infra/database/: database.py  preset.py  voice.py
src/misarmy_talkbot/infra/locale/: __init__.py  compile.py  context.py  (+2 more)
src/misarmy_talkbot/observability/: debugpy_boot.py  forensics.py  logger.py  metrics.py  trace.py
tests/: conftest.py  helpers.py  test_announcer.py  test_audio_storage.py  test_disconnect_supervisor.py  test_follow_registry.py  test_metrics_registry.py  test_playback_engine.py  test_playback_wait.py  test_presence_config.py  test_session_registry.py  test_voice_client.py  test_voice_pilot.py
(+10 files in other folders)
