[tool.poetry]
name = "misarmy-talkbot"
version = "0.1.0"
description = ""
authors = ["misdocumeno <misdocumeno@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
gtts = "^2.5.4"
jstyleson = "^0.0.2"
pydantic = "^2.13.3"
python-dotenv = "^1.2.2"
edge-tts = "^7.2.8"
sqlalchemy = "^2.0.49"
json5 = "^0.14.0"
aiofiles = "^25.1.0"
aiosqlite = "^0.22.1"
ffmpy3 = "^0.2.4"
regex = "^2026.4.4"
colorlog = "^6.10.1"
debugpy = "^1.8.20"
py-cord = { version = "^2.8.0rc2", extras = ["voice"], allow-prereleases = true }

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
